[package]
name = "vecd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-garbling.workspace = true
serde = { workspace = true, features = ["derive"], optional = false }
serde_json = { workspace = true, optional = false }
